# FoodOrdering_loadData_login_encryption

./: CMakeLists.txt  additional_things.c  buyer.h  choosingFood.c  data_loading.c  data_loading.h  free_memory.c  free_memory.h  initialize_variables.c  login.c  login.h  main.c  order.h  readme.txt  user_data.c  variables.h
